--- a/css/style_sass.css
+++ b/css/style_sass.css
@@ -194,7 +194,9 @@ input {
 /* Aca comienza el Grid para la pagina Resume*/
 #body__fatherGridResume {
   display: grid;
-  grid-template-areas: "headerGrid" "mainGrid" "footerGrid";
+  grid-template-areas: "headerGrid"
+ "mainGrid"
+ "footerGrid";
   grid-template-rows: 80px auto 80px;
   grid-template-columns: 100%;
   align-content: space-between;
@@ -214,7 +216,11 @@ input {
   .main__resume article {
     display: grid;
     grid-area: articleResumeGrid;
-    grid-template-areas: "myImageGrid" "personalInfoGrid" "jobExperienceGrid" "studiesGrid" "skillsGrid";
+    grid-template-areas: "myImageGrid"
+ "personalInfoGrid"
+ "jobExperienceGrid"
+ "studiesGrid"
+ "skillsGrid";
     grid-template-columns: 100%;
     justify-content: center;
     align-content: center;
@@ -240,7 +246,8 @@ input {
   align-items: center;
   justify-items: center;
   grid-template-columns: auto;
-  grid-template-areas: "h1PersonalInfo" "personalInfo"; }
+  grid-template-areas: "h1PersonalInfo"
+ "personalInfo"; }
   .main__personalInfoResume h1 {
     grid-area: h1PersonalInfo; }
   .main__personalInfoResume table {
@@ -262,7 +269,8 @@ input {
   align-content: center;
   align-items: start;
   justify-items: center;
-  grid-template-areas: " h1JobExperienceResume  h1JobExperienceResume h1JobExperienceResume" "job1ResumeGrid job2ResumeGrid job3ResumeGrid";
+  grid-template-areas: " h1JobExperienceResume  h1JobExperienceResume h1JobExperienceResume"
+ "job1ResumeGrid job2ResumeGrid job3ResumeGrid";
   grid-template-columns: 30vw 30vw 30vw;
   grid-column-gap: 1.5vw;
   grid-row-gap: 0px; }
@@ -381,13 +389,13 @@ h1 {
     font-size: 30px; }
   /* logo*/
   .headerFooter__logo {
-    margin-left: 10px; }
+    margin-left: 0px; }
     .headerFooter__logo img {
       width: 140px; }
   /* Logos de contactos*/
   .headerFooter__contactLogos {
     width: 120px;
-    margin-right: 15px; }
+    margin-right: 0px; }
     .headerFooter__contactLogos li a img {
       width: 40px; }
   /*Footer*/
