--- a/scss/Final_Project_index.scss
+++ b/scss/Final_Project_index.scss
@@ -22,12 +22,30 @@ body {
 .headerFooter__logo{
     width: 100%;
     }
+.headerFooter__logo:hover{
+    transform: translate(30px) scale(2,2);
+}
 /*Contact Logos*/
 .headerFooter__contactLogos{
     width:100%
 }
+.headerFooter__contactLogosList:hover{
+    transform: translate(-35px) scale(2,2);
+}
+/*My Photo*/
+.section__myPhoto{
+    margin-bottom: 40px;
+    img{
+        width: 100px;
+    }
+    img:hover{
+        animation: flip; 
+        animation-duration: 2s;
+    }
+}
+/*Bootstrap Modifications and new classes*/
 .mb-4{
-    margin-bottom: 45px;
+    margin-bottom: 40px !important; 
 }
 .background-color-07{
     background-color: rgba(39, 38, 41, 0.7);
@@ -55,15 +73,8 @@ body {
 .img-fluid{
     width: 100%;
 }
-
 .padding-0{
     padding:0px;
-}
-.section__myPhoto{
-    margin-bottom: 40px;
-    img{
-        width: 100px;
-    }
 }
 h1{
     font-family: "Post No Bills Colombo Bold";
@@ -75,7 +86,7 @@ p{
     font-size: 18px;
 }
 .footer__p{
-    font-size: 4vw;
+    font-size: 3vw;
     margin: 0px;
     padding: 0px;
 }
@@ -86,28 +97,34 @@ p{
 /*Logo*/
     .headerFooter__logo{
         width: 140px;
-        }
+    }
 /*Contact Logos*/
     .headerFooter__contactLogos{
         width:40px;
-}
+    }
 .footer__p{
     font-size: 20px;
+    }
+    .headerFooter__contactLogosList:hover{
+        transform: none;
+    }
+    .headerFooter__logo:hover{
+        transform: none;
+    }
 }
-}
-@media only screen and (min-width:1024px){
+@media only screen and (min-width:1200px){
     .navbar{
         font-size: 35px;
     }
 /*Logo*/
     .headerFooter__logo{
         width: 170px;
-        }
+    }
 /*Contact Logos*/
     .headerFooter__contactLogos{
         width:50px;
-}
+    }
 .footer__p{
     font-size: 20px;
-}
+    }
 }
