--- a/scss/Final_Project_index.scss
+++ b/scss/Final_Project_index.scss
@@ -21,10 +21,10 @@ body {
 /*Logo*/
 .headerFooter__logo{
     width: 100%;
+    &:hover{
+        transform: translate(30px) scale(2,2);
     }
-.headerFooter__logo:hover{
-    transform: translate(30px) scale(2,2);
-}
+    }
 /*Contact Logos*/
 .headerFooter__contactLogos{
     width:100%
@@ -97,6 +97,9 @@ p{
 /*Logo*/
     .headerFooter__logo{
         width: 140px;
+        &:hover{
+            transform: none;
+            }
     }
 /*Contact Logos*/
     .headerFooter__contactLogos{
@@ -106,9 +109,6 @@ p{
     font-size: 20px;
     }
     .headerFooter__contactLogosList:hover{
-        transform: none;
-    }
-    .headerFooter__logo:hover{
         transform: none;
     }
 }
