--- a/scss/Final_Project_works.scss
+++ b/scss/Final_Project_works.scss
@@ -23,10 +23,10 @@ body {
 /*Logo*/
 .headerFooter__logo{
     width: 100%;
+    &:hover{
+        transform: translate(30px) scale(2,2);
     }
-.headerFooter__logo:hover{
-    transform: translate(30px) scale(2,2);
-}
+    }
 /*Contact Logos*/
 .headerFooter__contactLogos{
     width:100%
