--- a/scss/Final_Project_index.scss
+++ b/scss/Final_Project_index.scss
@@ -44,6 +44,12 @@ body {
     }
 }
 /*Bootstrap Modifications and new classes*/
+.mt-1{
+    margin-top:10px !important;
+}
+.mb-1{
+    margin-bottom: 10px !important;
+}
 .mb-4{
     margin-bottom: 40px !important; 
 }
@@ -52,6 +58,9 @@ body {
 }
 .background-color-09{
     background-color: rgba(39, 38, 41, 0.9);
+}
+.radial-gradient{
+    background-image:  radial-gradient(rgba(39, 38, 41, 0.8) 20% ,rgba(39, 38, 41, 0.7) 40%,rgba(39, 38, 41, 0.5) 60%, rgba(39, 38, 41, 0.3) 80%);
 }
 .bold{
     font-family: "Post No Bills Colombo Bold" ;
@@ -79,11 +88,12 @@ body {
 h1{
     font-family: "Post No Bills Colombo Bold";
     font-style: normal;
-    font-size: 30px;
+    font-size: 4vw;
     text-decoration: underline;
-    margin-bottom: 15px;}
+    margin-bottom: 15px;
+}
 p{
-    font-size: 18px;
+    font-size: 3vw;
 }
 .footer__p{
     font-size: 3vw;
@@ -105,6 +115,14 @@ p{
     .headerFooter__contactLogos{
         width:40px;
     }
+    /*Generic Format*/
+    h1{
+        font-size: 30px;
+    }
+    p{
+        font-size: 18px;
+    }
+    /*Footer*/
 .footer__p{
     font-size: 20px;
     }
