--- a/scss/Final_Project_style.scss
+++ b/scss/Final_Project_style.scss
@@ -509,6 +509,9 @@ h2{
         section{
             width: 50vw;
         }
+        div{
+            font-size: 20px;
+        }
     }
     /*Formulario Contact*/
     .main__formulario{
