--- a/css/style_sass.css
+++ b/css/style_sass.css
@@ -406,6 +406,8 @@ h2 {
   /*About Main*/
   .main__about section {
     width: 50vw; }
+  .main__about div {
+    font-size: 20px; }
   /*Formulario Contact*/
   .main__formulario textarea {
     width: 60%; }
