--- a/scss/Final_Project_works.scss
+++ b/scss/Final_Project_works.scss
@@ -22,17 +22,11 @@ body {
 }
 /*Logo*/
 .headerFooter__logo{
-    width: 100%;
-    &:hover{
-        transform: translate(30px) scale(2,2);
-    }
+    width: 25vw;
     }
 /*Contact Logos*/
 .headerFooter__contactLogos{
-    width:100%
-}
-.headerFooter__contactLogosList:hover{
-    transform: translate(-35px) scale(2,2);
+    width:9vw;
 }
 /*Tabla Works*/
 .table{
@@ -130,12 +124,6 @@ h1{
             }
         }
     }
-    .headerFooter__contactLogosList:hover{
-        transform: none;
-    }
-    .headerFooter__logo:hover{
-        transform: none;
-    }
     /*Generic Format*/
     h1{
         font-size: 30px;
@@ -168,7 +156,3 @@ h1{
         }
     }
 }
-
-
-
-
